optimizations informed by memory profiling.  should consume less memory and as a result run faster.